<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="IO_OP10_JB_IO" Id="{88e7a83b-dfaa-4a60-a6dd-fe8b3552e62f}">
    <Declaration><![CDATA[
VAR_GLOBAL
	
	I10A_HPR_UNIT_ALRM_I100_0       :BOOL;
	I10A_SPARE_I100_1               :bool;
	I10A_HPR_LOW_LVL_SEN_I100_2     :bool;
	I10A_HPR_SOL_DOOR_SW_FB_I100_3  :bool;
	I10A_HPR_OFF_ON_I100_4          :bool;
	I10A_BDY_BOWL_OFF_ON_I100_5     :bool;
	I10A_BDY_LNR1_OFF_ON_I100_6     :bool;
	I10A_BDY_LNR2_OFF_ON_I100_7     :bool;
	I10A_HPR_DOOR_SELCTN_I101_0     :bool;
	I10A_SPARE_I101_1               :bool;
	I10A_BDY_BOWL_LOW_LVL_I101_2    :bool;
	I10A_BDY_BWL_RUN_I101_3         :bool;
	I10A_BDY_LNR1_RUN_I101_4        :bool;
	I10A_BDY_LNR2_RUN_I101_5        :bool;
	I10A_BDY_LNR_FEED1_OVRFLW_I101_6:bool;
	I10A_BDY_LNR_FEED2_OVRFLW_I101_7:bool;
	I10A_LNR_TRK1_CHO_MOD1_I102_0   :bool;
	I10A_LNR_TRK1_CHO_MOD2_I102_1   :bool;
	I10A_LNR_TRK2_CHO_MOD1_I102_2   :bool;
	I10A_LNR_TRK2_CHO_MOD2_I102_3   :bool;
	I10A_LNR_TRK3_CHO_MOD1_I102_4   :bool;
	I10A_LNR_TRK3_CHO_MOD2_I102_5   :bool;
	I10A_LH_BDY_CONT_FB_I102_6      :bool;
	I10A_RH_BDY_CONT_FB_I102_7      :bool;
	I10A_SPARE_I103_0               :bool;
	I10A_SPARE_I103_1               :bool;
	I10A_SPARE_I103_2               :bool;
	I10A_SPARE_I103_3               :bool;
	I10A_SPARE_I103_4               :bool;
	I10A_SPARE_I103_5               :bool;
	I10A_SPARE_I103_6               :bool;
	I10A_SPARE_I103_7               :BOOL;
	
	O10A_HPR_MTR_FWD_Q100_0        : BOOL;   
	O10A_HPR_RST_Q100_1            : BOOL;   
	O10A_EXT_SPEED_Q100_2          : Bool;   
	O10A_SPARE_Q100_3       		: BOOL;   
	O10A_HPR_DOOR_SELCTN_IND_Q100_4: Bool;   
	O10A_HPR_TWR_LMP_RED_Q100_5    : Bool;   
	O10A_HPR_TWR_LMP_GREEN_Q100_6  : Bool;   
	O10A_SPARE_Q100_7       	   : BOOL;   
	O10A_BDY_BOWL_ON_Q101_0        : Bool;   
	O10A_BDY_LNR_FEED1_ON_Q101_1   : Bool;   
	O10A_BDY_LNR_FEED2_ON_Q101_2   : Bool;   
	O10A_BDY_LNR1_AIR_PURGE_Q101_3 : Bool;   
	O10A_BDY_LNR2_AIR_PURGE_Q101_4 : Bool;   
	O10A_HPR_DOOR_OPN_Q101_5       : Bool;   
	O10A_SPARE_Q101_6              : Bool;   
	O10A_SPARE_Q101_7              : Bool;   
	O10A_SPARE_Q102_0              : Bool;   
	O10A_SPARE_Q102_1              : Bool;   
	O10A_SPARE_Q102_2              : Bool;   
	O10A_SPARE_Q102_3              : Bool;   
	O10A_SPARE_Q102_4              : Bool;   
	O10A_SPARE_Q102_5              : Bool;   
	O10A_SPARE_Q102_6              : Bool;   
	O10A_SPARE_Q102_7              : Bool;   
	O10A_SPARE_Q103_0              : Bool;   
	O10A_SPARE_Q103_1              : Bool;   
	O10A_SPARE_Q103_2              : Bool;   
	O10A_SPARE_Q103_3              : Bool;   
	O10A_SPARE_Q103_4              : Bool;   
	O10A_SPARE_Q103_5              : Bool;   
	O10A_SPARE_Q103_6              : Bool;   
	O10A_SPARE_Q103_7              : BOOL;

	I10B_HPR_UNIT_ALRM_I200_0          :BOOL;
	I10B_SPARE_I200_1                  :BOOL;
	I10B_HPR_LOW_LVL_SEN_I200_2        :BOOL;
	I10B_HPR_SOL_DOOR_SW_FB_I200_3     :BOOL;
	I10B_HPR_OFF_ON_I200_4             :BOOL;
	I10B_BDY_BOWL_OFF_ON_I200_5        :BOOL;
	I10B_BDY_LNR1_OFF_ON_I200_6        :BOOL;
	I10B_BDY_LNR2_OFF_ON_I200_7        :BOOL;
	I10B_HPR_DOOR_SELCTN_I201_0        :BOOL;
	I10B_SPARE_I201_1			       :BOOL;
	I10B_BDY_BOWL_LOW_LVL_I201_2       :BOOL;
	I10B_BDY_BWL_RUN_I201_3            :BOOL;
	I10B_BDY_LNR1_RUN_I201_4           :BOOL;
	I10B_BDY_LNR2_RUN_I201_5           :BOOL;
	I10B_BDY_LNR_FEED1_OVRFLW_I201_6   :BOOL;
	I10B_BDY_LNR_FEED2_OVRFLW_I201_7   :BOOL;
	I10B_LNR_TRK1_CHO_MOD1_I202_0      :BOOL;
	I10B_LNR_TRK1_CHO_MOD2_I202_1      :BOOL;
	I10B_LNR_TRK2_CHO_MOD1_I202_2      :BOOL;
	I10B_LNR_TRK2_CHO_MOD2_I202_3      :BOOL;
	I10B_LNR_TRK3_CHO_MOD1_I202_4      :BOOL;
	I10B_LNR_TRK3_CHO_MOD2_I202_5      :BOOL;
	I10B_SPARE_I202_6           :BOOL;
	I10B_SPARE_I202_7           :BOOL;
	I10B_SPARE_I203_0           :BOOL;
	I10B_SPARE_I203_1           :BOOL;
	I10B_SPARE_I203_2           :BOOL;
	I10B_SPARE_I203_3           :BOOL;
	I10B_SPARE_I203_4           :BOOL;
	I10B_SPARE_I203_5           :BOOL;
	I10B_SPARE_I203_6           :BOOL;
	I10B_SPARE_I203_7		    :BOOL;
	
	O10B_HPR_MTR_FWD_Q200_0:BOOL;
	O10B_HPR_RST_Q200_1				 :BOOL;  
	O10B_EXT_SPEED_Q200_2            :bool;  
	O10B_SPARE_Q200_3		         :BOOL;  
	O10B_HPR_DOOR_SELCTN_IND_Q200_4  :bool;  
	O10B_HPR_TWR_LMP_RED_Q200_5      :bool;  
	O10B_HPR_TWR_LMP_GREEN_Q200_6    :bool;  
	O10B_SPARE_Q200_7                :BOOL;  
	O10B_BDY_BOWL_ON_Q201_0          :bool;  
	O10B_BDY_LNR_FEED1_ON_Q201_1     :bool;  
	O10B_BDY_LNR_FEED2_ON_Q201_2     :bool;  
	O10B_BDY_LNR1_AIR_PURGE_Q201_3   :bool;  
	O10B_BDY_LNR2_AIR_PURGE_Q201_4   :bool;  
	O10B_HPR_DOOR_OPN_Q201_5         :bool;  
	O10B_SPARE_Q201_6                :bool;  
	O10B_SPARE_Q201_7                :bool;  
	O10B_SPARE_Q202_0                :bool;  
	O10B_SPARE_Q202_1                :bool;  
	O10B_SPARE_Q202_2                :bool;  
	O10B_SPARE_Q202_3                :bool;  
	O10B_SPARE_Q202_4                :bool;  
	O10B_SPARE_Q202_5                :bool;  
	O10B_SPARE_Q202_6                :bool;  
	O10B_SPARE_Q202_7                :bool;  
	O10B_SPARE_Q203_0                :bool;  
	O10B_SPARE_Q203_1                :bool;  
	O10B_SPARE_Q203_2                :bool;  
	O10B_SPARE_Q203_3                :bool;  
	O10B_SPARE_Q203_4                :bool;  
	O10B_SPARE_Q203_5                :bool;  
	O10B_SPARE_Q203_6                :bool;  
	O10B_SPARE_Q203_7	             :BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>